--- a/gke.yaml
+++ b/gke.yaml
@@ -30,7 +30,7 @@ apiVersion: "v1"
 kind: "Service"
 metadata:
   name: "gcp-devops-gke-service"
-  namespace: "gcp-devops-prod"
+  namespace: "gcp-devops-prod-dev"
   labels: 
     app.kubernetes.io/managed-by: "gcp-cloud-build-deploy"
 spec:
